language/move-lang/tests/move_check/locals/use_after_move_if_else.exp
error: 

   ┌── tests/move_check/locals/use_after_move_if_else.move:5:17 ───
   │
 5 │         let _ = move x + 1;
   │                 ^^^^^^ Invalid usage of local 'x'
   ·
 4 │         if (cond) { _ = move x } else { _ = move x };
   │                                             ------ The local does not have a value due to this position. The local must be assigned a value before being used
   │

error: 

    ┌── tests/move_check/locals/use_after_move_if_else.move:11:17 ───
    │
 11 │         let _ = move x + 1;
    │                 ^^^^^^ Invalid usage of local 'x'
    ·
 10 │         if (cond) { _ = move x } else { _ = x };
    │                         ------ The local might not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_after_move_if_else.move:17:17 ───
    │
 17 │         let _ = x + 1;
    │                 ^ Invalid usage of local 'x'
    ·
 16 │         if (cond) { _ = move x } else { _ = move x };
    │                                             ------ The local does not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_after_move_if_else.move:24:17 ───
    │
 24 │         let _ = x + 1;
    │                 ^ Invalid usage of local 'x'
    ·
 23 │         if (cond) { _ = move x } else { _ = x };
    │                         ------ The local might not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_after_move_if_else.move:30:17 ───
    │
 30 │         let _ = &x;
    │                 ^^ Invalid usage of local 'x'
    ·
 29 │         if (cond) { _ = move x } else { _ = move x };
    │                                             ------ The local does not have a value due to this position. The local must be assigned a value before being used
    │

error: 

    ┌── tests/move_check/locals/use_after_move_if_else.move:36:17 ───
    │
 36 │         let _ = &x;
    │                 ^^ Invalid usage of local 'x'
    ·
 35 │         if (cond) { _ = move x } else { _ = x };
    │                         ------ The local might not have a value due to this position. The local must be assigned a value before being used
    │

